--- a/Review.ipynb
+++ b/Review.ipynb
@@ -69,8 +69,8 @@
    "metadata": {},
    "source": [
     "同时，除了我们的研究对象和控制变量之外的其他因素在模型中不起作用，那么需要假定\n",
-    "### MLR4. 零条件均值（0 Conditional Expectation）$𝐸(\\mu|x_1,\\dots,x_n)=0$\n",
-    "在实际中，很多情况下我们无法直接得到$𝐸(\\mu|x_1,\\dots,x_n)=0$，但是我们可以引入一个**截距项$\\alpha$**，将所有不等于0的影响全部归纳到它里面，即可以获得模型\n",
+    "### MLR4. 零条件均值（0 Conditional Expectation）$E(\\mu|x_1,\\dots,x_n)=0$\n",
+    "在实际中，很多情况下我们无法直接得到$E(\\mu|x_1,\\dots,x_n)=0$，但是我们可以引入一个**截距项$\\alpha$**，将所有不等于0的影响全部归纳到它里面，即可以获得模型\n",
     "$$  y=\\alpha+\\sum_i^n \\beta_i x_i+\\mu \\tag{3}$$\n",
     "零条件均值另外一个等价的概念就是$cov(x_i,\\mu)=0$，即$x_i$与残差都不相关：\n",
     "1. 如果$x_i$满足这个假设的话则称$x_i$为**外生变量（exogenous explanatory variable)**\n",
